--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "nanoid": "^4.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
