--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
